syntax = "proto3";
package airbloc.p2p.v1;

option go_package = "github.com/airbloc/airbloc-go/proto/p2p/v1";

message DAuthSignUpRequest {
    string provider = 1;
    string identityHash = 2; // Hash
}

message DAuthSignUpResponse {
    string accountId = 1; // ID
}

/**
 * DAuth (Data Collection Authentification) API.
 */
message DAuthRequest {
    uint32 action = 1;
    string accountId = 2;
    string appName = 3;
    string dataType = 4;
}

message DAuthModifyRequest {
    uint32 action = 1;
    string accountId = 2;
    string appName = 3;
    string dataType = 4;
    string passwordSignature = 5;
}

message DAuthManyRequest {
    message ConsentData {
        uint32 action = 1;
        string dataType = 2;
        bool allow = 3;
    }

    string appName = 1;
    string accountId = 2;
    repeated ConsentData consentData = 3;
}

message DAuthResponse {
}
