syntax = "proto3";
package airbloc.rpc.v1;

option go_package = "github.com/airbloc/airbloc-go/proto/rpc/v1/controller";

service Account {
    rpc Create (AccountCreateRequest) returns (AccountCreateResponse);
    rpc Get (AccountGetRequest) returns (AccountGetResponse);
    rpc GetByIdentity (AccountGetByIdentityRequest) returns (AccountGetResponse);
    rpc TestPassword (TestPasswordRequest) returns (TestPasswordResponse);
}

message AccountCreateRequest {
    string address = 1; // Address
    bytes passwordSignature = 2;
}

message AccountCreateResponse {
    string accountId = 1; // ID
}

message AccountGetRequest {
    string accountId = 1; // ID
}

message AccountGetResponse {
    enum Status {
        _NONE = 0;
        TEMPORARY = 1;
        CREATED = 2;
    }
    string accountId = 1; // ID
    string ownerAddress = 2; // Address
    Status status = 3;
    string proxyAddress = 4; // Address
    bytes passwordProof = 5;
}

message AccountGetByIdentityRequest {
    string identity = 1;
}

message TestPasswordRequest {
    string messageHash = 1; // Hash
    bytes signature = 2;
}

message TestPasswordResponse {
    bool exists = 1;
}
